--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
-<h1>My name is <%= ["Amigo", "Oscar", "Viking"].sample %></h1>
-
+<h1>My name is <%= @name %></h1>
+<div>
 <img src="http://bit.ly/1eze8aE" alt="a cute kitty" title="meow" style="border: 3px dashed red;padding-right: 50px;">
+</div>
